--- a/style.scss
+++ b/style.scss
@@ -90,6 +90,13 @@ canvas {
             opacity: 1;
         }
 
+#logo-cursor{
+    position: fixed;
+    pointer-events: none;
+    z-index: 9999;
+    transition: transform 0.05s linear, opacity 5s ease-in-out;
+    width: 100px;
+}
 
 //좌측       
 .primary{
