--- a/style.css
+++ b/style.css
@@ -3,16 +3,20 @@
   font-family: "cmunti";
   src: url("./font/cmunti.woff") format("woff");
 }
+@font-face {
+  font-family: "cmunrm";
+  src: url("./font/cmunrm.woff") format("woff");
+}
 #myElement {
   cursor: url("./asset/icon/cursor.svg") 0 0, default;
 }
 
 html {
-  background-color: #edebe6;
-  color: #b70000;
+  background-color: #f3f5f5;
+  color: #c9002b;
   font-size: 14px;
   line-height: 1.5;
-  font-family: "cmunti", "Garamond", "Times New Roman", "Georgia", serif;
+  font-family: "cmunrm", "Garamond", "Times New Roman", "Georgia", serif;
 }
 @media (max-width: 768px) {
   html {
@@ -21,18 +25,18 @@ html {
 }
 
 a {
-  color: #b70000;
+  color: #c9002b;
   cursor: pointer;
   text-decoration: none;
 }
 
 a:hover {
-  color: #b70000;
+  color: #c9002b;
   cursor: pointer;
 }
 
 a:after {
-  color: #b70000;
+  color: #c9002b;
 }
 
 h1 {
@@ -103,6 +107,7 @@ main {
 @media (max-width: 768px) {
   main {
     max-height: 200vh;
+    margin-top: 4rem;
   }
 }
 
@@ -115,7 +120,7 @@ main {
 }
 
 .image-content {
-  width: 60%;
+  width: 100%;
   min-width: 250px;
 }
 @media (max-width: 768px) {
@@ -174,8 +179,8 @@ main {
   background: none;
   border: none;
   cursor: pointer;
-  font-family: "cmunti", "Garamond", "Times New Roman", "Georgia", serif;
-  color: #b70000;
+  font-family: "cmurm", "Garamond", "Times New Roman", "Georgia", serif;
+  color: #c9002b;
   width: 20%;
   display: flex;
   text-align: center;
@@ -201,7 +206,7 @@ main {
   left: 0;
   height: 100%;
   width: 0%;
-  background-color: #b70000;
+  background-color: #c9002b;
 }
 
 .video-container.fullscreen {
@@ -211,13 +216,13 @@ main {
   width: 100vw;
   height: 100vh;
   z-index: 9999;
-  background-color: #edebe6;
+  background-color: #f3f5f5;
 }
 
 .video-container.fullscreen video {
   width: 100%;
   height: 100%;
-  background-color: #edebe6;
+  background-color: #f3f5f5;
 }
 
 .secondary {
@@ -232,6 +237,13 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+@media (max-width: 768px) {
+  .toc {
+    width: 15rem;
+    height: 15rem;
+    font-size: 0.9rem;
+  }
 }
 .toc span {
   position: absolute;
@@ -249,7 +261,7 @@ main {
 }
 @media (max-width: 768px) {
   .toc span .number-description {
-    font-size: 10px;
+    font-size: 0.625rem;
     display: inline-block;
     max-width: calc(100% - 3rem);
     white-space: normal;
@@ -283,7 +295,13 @@ menu {
   right: 2rem;
   margin: 0;
   display: flex;
+  font-size: 1rem;
 }
 menu span:last-child {
   margin-left: 2rem;
+}
+@media (max-width: 768px) {
+  menu {
+    z-index: 999;
+  }
 }/*# sourceMappingURL=style.css.map */
